--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: [Egor's Cybersecurity Portfolio]
 description: [To showcase my mad skills to my future employer.]
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
